Fixing z-index so alerts display on top of stage.

--- a/src/css/z-index.css
+++ b/src/css/z-index.css
@@ -14,7 +14,6 @@ $z-index-tooltip: 130; /* tooltips should go over add buttons if they overlap */
 $z-index-card: 490;
 $z-index-loader: 500;
 $z-index-modal: 510;
-$z-index-alerts: 520;
 
 $z-index-drag-layer: 1000;
 $z-index-monitor-dragging: 1010;
@@ -24,6 +23,7 @@ $z-index-stage-color-picker-background: 2000;
 $z-index-stage-with-color-picker: 2010;
 $z-index-stage-header: 5000;
 $z-index-stage-wrapper-overlay: 5000;
+$z-index-alerts: 5010;
 
 /* in most interfaces, the context menu is always on top */
 $z-index-context-menu: 10000;
